--- a/QuizGameServer/pom.xml
+++ b/QuizGameServer/pom.xml
@@ -55,19 +55,14 @@
             <version>2.9.1</version>
         </dependency>
         <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>3.10.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.litote.kmongo</groupId>
             <artifactId>kmongo</artifactId>
             <version>3.9.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.litote.kmongo</groupId>
-            <artifactId>kmongo-id</artifactId>
-            <version>3.9.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mongodb</groupId>
-            <artifactId>bson</artifactId>
-            <version>3.9.1</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
