--- a/QuizGameServer/pom.xml
+++ b/QuizGameServer/pom.xml
@@ -10,12 +10,14 @@
 
     <properties>
         <kotlin.version>1.3.21</kotlin.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>me.srikavin</groupId>
-            <artifactId>quiz-network-commmons</artifactId>
+            <artifactId>quiz-network-commons</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
