--- a/QuizGameServer/pom.xml
+++ b/QuizGameServer/pom.xml
@@ -71,6 +71,11 @@
             <artifactId>kotlin-stdlib</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.threeten</groupId>
+            <artifactId>threetenbp</artifactId>
+            <version>1.3.7</version>
+        </dependency>
     </dependencies>
 
     <repositories>
