--- a/QuizGameClient/pom.xml
+++ b/QuizGameClient/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.srikavin</groupId>
     <artifactId>QuizGameClient</artifactId>
-    <version>1.1</version>
+    <version>1.1.2</version>
 
     <properties>
         <kotlin.version>1.3.21</kotlin.version>
@@ -15,11 +15,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib-jdk8</artifactId>
-            <version>${kotlin.version}</version>
-        </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-test</artifactId>
@@ -34,12 +29,14 @@
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-compiler</artifactId>
-            <version>1.3.20</version>
+            <version>${kotlin.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
             <version>${kotlin.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
