--- a/QuizGameServer/pom.xml
+++ b/QuizGameServer/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>me.srikavin</groupId>
             <artifactId>quiz-network-commons</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.1</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
