--- a/quiz-network-commons/pom.xml
+++ b/quiz-network-commons/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.srikavin</groupId>
     <artifactId>quiz-network-commons</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1</version>
 
     <properties>
         <kotlin.version>1.3.21</kotlin.version>
