--- a/QuizGameClient/pom.xml
+++ b/QuizGameClient/pom.xml
@@ -6,10 +6,11 @@
 
     <groupId>me.srikavin</groupId>
     <artifactId>QuizGameClient</artifactId>
-    <version>1.3.1</version>
+    <version>1.3.3</version>
 
     <properties>
         <kotlin.version>1.3.21</kotlin.version>
+        <kotlin.compiler.jvmTarget>1.6</kotlin.compiler.jvmTarget>
         <maven.compiler.source>1.6</maven.compiler.source>
         <maven.compiler.target>1.6</maven.compiler.target>
     </properties>
