--- a/quiz-network-commons/pom.xml
+++ b/quiz-network-commons/pom.xml
@@ -10,6 +10,7 @@
 
     <properties>
         <kotlin.version>1.3.21</kotlin.version>
+        <kotlin.compiler.jvmTarget>1.6</kotlin.compiler.jvmTarget>
         <maven.compiler.source>1.6</maven.compiler.source>
         <maven.compiler.target>1.6</maven.compiler.target>
     </properties>
